@@ -1,1 +1,2 @@
-Don't paint the cards which have a comma in them
+Don't paint the cards which have a comma in them.
+Make Add/Edit Layout scrollable.
